--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -12,7 +12,7 @@
 		<param-name>javax.faces.PROJECT_STAGE</param-name>
 		<param-value>Development</param-value>
 	</context-param>
-	
+
 	<!-- Configuracao do JSF -->
 	<servlet>
 		<servlet-name>Faces Servlet</servlet-name>
@@ -23,5 +23,10 @@
 		<servlet-name>Faces Servlet</servlet-name>
 		<url-pattern>*.xhtml</url-pattern>
 	</servlet-mapping>
+
+	<!-- Carregamento do Hibernate -->
+	<listener>
+		<listener-class>br.com.acpn.locar_web.util.HibernateContexto</listener-class>
+	</listener>
 
 </web-app>
